@@ -520,6 +520,7 @@ INSERT INTO ART_REPORT_TYPES VALUES (127,'XDocReport: FreeMarker engine - PPTX')
 INSERT INTO ART_REPORT_TYPES VALUES (128,'XDocReport: Velocity engine - PPTX');
 INSERT INTO ART_REPORT_TYPES VALUES (129,'Dashboard: Gridstack');
 INSERT INTO ART_REPORT_TYPES VALUES (130,'ReactPivot');
+INSERT INTO ART_REPORT_TYPES VALUES (131,'Thymeleaf');
 INSERT INTO ART_REPORT_TYPES VALUES (-1,'Chart: XY');
 INSERT INTO ART_REPORT_TYPES VALUES (-2,'Chart: Pie 3D');
 INSERT INTO ART_REPORT_TYPES VALUES (-3,'Chart: Horizontal Bar 3D');
