@@ -8,6 +8,7 @@ ART 3.0
 * Modified application settings configuration. Settings need to be manually re-entered.
 * Modified application urls. Previously bookmarked urls may no longer work.
 * Added ability to create reports based on FreeMarker templates
+* Added ability to create reports based on Thymeleaf templates
 * Added ability to create reports based on MS Word (docx), LibreOffice Writer (odt) and MS PowerPoint (pptx) templates
 * Added docx, odt, ods report formats for tabular and jasper reports
 * Added gridstack dashboard report type
